$Id$

2017-04-01  Christian Franke  <franke@computer.org>

	ataidentify.cpp, ataprint.cpp: Add ACS-4 and SATA 3.3 major
	versions, log pages, device statistic values and feature bits.

2017-03-27  Christian Franke  <franke@computer.org>

	scsiprint.cpp: Suppress "SAS address" if '-q noserial' is
	specified (ticket #822).

	scsicmds.cpp: Remove useless variable
	(cppcheck 1.77: knownConditionTrueFalse).

	smartd.cpp: Always suppress "failed to read Temperature" message
	if SCSI device does not support temperature (ticket #817).
	Fix initial check for SCSI temperature support.
	Log SCSI temperature regardless of its origin.

2017-03-11  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in,
	update-smart-drivedb.8.in: Update EXPERIMENTAL notes.
	Update links.  Update or remove various outdated info.

	smartctl.8.in: Fix documentation of the '-g all' option.

	smartctl.cpp: Add '-g dsn' to '-x' output.

2017-03-11  Jonghwan Choi  <jhbird.choi@gmail.com>

	ataprint.cpp: Fix false positive DSN support detection.

2017-03-09  Jean Delvare  <...>

	smartctl.8.in: Fix documentation of the '-q' option.

2017-03-09  Christian Franke  <franke@computer.org>

	AUTHORS: Add Jonghwan Choi.

2017-03-09  Jonghwan Choi  <jhbird.choi@gmail.com>

	Add options to get/set ATA DSN (Device Statistics Notification)
	feature (ticket #815):
	atacmds.h: Add DSN feature subcommand code.
	ataprint.cpp, ataprint.h, smartctl.cpp: Add '-g/s dsn' options.
	smartd.cpp: Add '-e dsn' directive.
	smartctl.8.in, smartd.conf.5.in: Document the new options.

2017-03-04  Christian Franke  <franke@computer.org>

	smartctl.cpp, smartd.cpp: Fix help text for '-B' option.

	smartd.cpp: Unify indent style, replace tabs.
	Move ATA/SCSI/NVMe device open to new common function.
	Suppress warning emails and repeated log messages on open error if
	'-d removable' is specified (Debian Bug 770872, Ubuntu Bug 1451572).
	smartd.conf.5.in: Document new behaviour of '-d removable'.
